<resources>
    <string name="app_name">FoodApps</string>
    <string name="title_tab_home">home</string>
    <string name="title_tab_cart">cart</string>
    <string name="title_tab_profile">profile</string>
    <string name="text_btn_add_to_cart">text_btn_add_to_cart</string>
    <string name="you_might_looking_for">you_might_looking_for</string>
    <string name="hint_name">Name\n</string>
    <string name="text_name">SElamat Datang Nurul Aisyah !!!\n</string>
    <string name="text_hint_username">Username</string>
    <string name="text_username">Nurul Aisyah\n</string>
    <string name="text_hint_email">Email\n</string>
    <string name="text_email">nurulaisyah.sch@gmail.com</string>
    <string name="text_edit">Edit\n</string>
    <string name="txt_name">Nurul Aisyah</string>
    <string name="txt_delivered_order">Order :</string>
    <string name="txt_address">Tegal, Jawa Tengah</string>
    <string name="add_to_cart_succes">add to cart succes</string>
    <string name="add_to_cart_failed">"add to cart failed "</string>
    <string name="text_add_to_cart_success">add to cart success\n</string>
    <string name="txt_loading">loading</string>
    <string name="loading">loading</string>
    <string name="txt_add_to_cart">add to cart</string>
    <string name="add_to_cart">add to cart\n</string>
    <string name="text_delivery_method">delivery method\n</string>
    <string name="text_payment_method">payment method\n</string>
    <string name="text_cash">cash\n</string>
    <string name="text_e_wallet">wallet\n</string>
    <string name="shopping_summary">shopping summary\n</string>
    <string name="text_delivery">delivery\n\n</string>
    <string name="text_pick_up">pick up\n</string>
    <string name="text_title_your_cart">cart\n</string>
    <string name="text_total_price">total price\n</string>
    <string name="text_checkout">checkout\n</string>
    <string name="total_quantity">%s items selected</string>
    <string name="text_total_menu_price">total menu price\n</string>
    <string name="text_title_order_confirmation">order confirmation</string>
    <string name="text_cart_is_empty">cart is empty\n</string>
    <string name="text_banner">welcome Food Apps!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_logout">Log Out\n</string>
    <string name="name">Name</string>
    <string name="name_profile">Nurul Aisyah</string>
    <string name="username">Username</string>
    <string name="username_profile">NrlAisyh</string>
    <string name="email">Email</string>
    <string name="Email_Profile">nurul@example.com</string>
    <string name="txt_name_menu">Name Menu</string>
    <string name="txt_price_menu">Price Menu\n</string>
    <string name="txt_more">More\n</string>
    <string name="txt_option_more">Option More</string>
    <string name="txt_greeting_1">Hai Nurul !\n</string>
    <string name="txt_greeting"> Banyak DIskon Menarik Lainnya !!\n</string>
    <string name="menu">Menu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_add_to_cart_2">Add</string>
    <string name="text_hint_notes">notes\n</string>
    <string name="description_menu">Description Menu</string>
    <string name="txt_description_menu">Description Menu\n</string>
    <string name="txt_location_resto">Lokasi Restoran</string>
    <string name="txt_nama_menu">Nama Menu</string>
    <string name="txt_desc_menu">Deskripsi Menu</string>
    <string name="text_already_have_an_account_click_here">do you have acount ? \n</string>
    <string name="text_register">register\n</string>
    <string name="hint_email">email\n</string>
    <string name="hint_password">password\n</string>
    <string name="hint_confirm_password">confirm password\n</string>
    <string name="name_menu">Name Menu</string>
    <string name="price_menu">Price Menu</string>
    <string name="text_generic_error">error</string>
    <string name="create_order_success">vreate order success</string>
    <string name="close">close\n</string>
    <string name="error_checkout">cekhout_eror\n</string>
    <string name="login_failed_">LOGIN FAILED</string>
    <string name="register_successfully">Register Successfully</string>
    <string name="txt_password_failed">Password tidak sama</string>
    <string name="txt_password_failed2">Kolom tidak boleh kosong</string>
</resources>